<resources>
    <string name="app_name">App Croquis</string>
    <string name="title_activity_product_display">ProductDisplayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="stock_available">Stock disponible</string>
    <string name="zero">0</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="post_by">Proposé par :</string>
    <string name="product_detail">Product detail</string>
    <string name="article">Libellé de l\'article</string>
    <string name="price">Prix de l\'article</string>
    <string name="save">Enregistrer</string>
    <string name="profile">Profil</string>
    <string name="edit">Modifier</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="initial_price">50 000</string>
    <string name="last_name">Nom</string>
    <string name="first_name">Prénom</string>

    <array name="product_name_list">
        <item>Mercedes</item>
        <item>Toyota</item>
        <item>BMW</item>
        <item>Nissan</item>
        <item>Honda</item>
        <item>Range Rover</item>
        <item>Jeep</item>
        <item>Hiunday</item>
        <item>Mazda</item>
        <item>Bugatti</item>
    </array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Parametre</string>
    <string name="delete">Supprimer</string>
</resources>